--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.17.0",
     "massive": "^6.1.4",
     "nodemon": "^2.0.2",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
